Exchangeapp_backend/deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exchangeapp
  labels:
    app.kubernetes.io/name: exchangeapp
    istio-injection: enabled
