Exchangeapp_backend/deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exchangeapp
  namespace: exchangeapp
  labels:
    app.kubernetes.io/name: exchangeapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: exchangeapp
